--- a/villaride/style/scss/_basic.scss
+++ b/villaride/style/scss/_basic.scss
@@ -25,8 +25,14 @@ a {
 	text-decoration: none;
 	color: $fontColor;
 }
+a:visited {
+  color: $fontColor;
+}
 button {
   cursor: pointer;
+}
+video {
+  outline: none;
 }
 .container {
   max-width: 1210px;
