--- a/villaride/style/scss/_block-1.scss
+++ b/villaride/style/scss/_block-1.scss
@@ -48,7 +48,6 @@
           margin: 50px 0 0 65px;
           @media (max-width: 450px) {flex-direction: column; align-items: center; margin: 25px 0 0 0;}
           > div {
-
             > .image {
               padding-top: 3px;
               margin: 0 25px 0 0;
@@ -106,6 +105,12 @@
               margin: 0 5px 0 0;
               height: 35px;
               width: 35px;
+              > img {
+                height: 100%;
+                width: 100%;
+                -o-object-fit: cover;
+                   object-fit: cover;
+              }
             }
             > a:last-child {
               margin: 0;
