--- a/villaride/style/scss/_block-3.scss
+++ b/villaride/style/scss/_block-3.scss
@@ -71,17 +71,6 @@
           -o-object-fit: cover;
              object-fit: cover;
         }
-        > .play-btn {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translateX(-50%) translateY(-50%);
-          cursor: pointer;
-          transition: $transition;
-          &:hover {
-            transform: scale(1.1) translateX(-49%) translateY(-49%);
-          }
-        }
         > video {
           height: 100%;
           width: 100%;
@@ -95,13 +84,16 @@
         height: 100px;
         width: 100px;
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translateX(-50%) translateY(-50%);
         cursor: pointer;
         transition: $transition;
         &:hover {
-          transform: scale(1.1) translateX(-49%) translateY(-49%);
+          transform: scale(1.1);
+          > img {
+            height: 100%;
+            width: 100%;
+            -o-object-fit: cover;
+               object-fit: cover;
+          }
         }
       }
     }
