--- a/villaride/style/scss/_block-8.scss
+++ b/villaride/style/scss/_block-8.scss
@@ -4,6 +4,7 @@
   > a[name=gallery]{
     position: absolute;
     top: -80px;
+    @media (max-width: 500px) { top: -115px; }
   }
   > div {
     > .title {
@@ -46,16 +47,22 @@
         justify-content: center;
         align-items: center;
         position: absolute;
-        top: 37%;
+        top: 35%;
         left: 1%;
         cursor: pointer;
         z-index: 1;
         background-color: white;
         border-radius: 50%;
         transition: $transition;
-        transform: rotate(180deg);
+
         &:hover {
-          transform: scale(1.1) rotate(180deg);
+          transform: scale(1.1);
+        }
+        > img {
+          height: 100%;
+          width: 100%;
+          -o-object-fit: cover;
+             object-fit: cover;
         }
         // @media (max-width: 700px) { display: none;}
       }
@@ -67,7 +74,7 @@
         align-items: center;
         position: absolute;
         position: absolute;
-        top: 37%;
+        top: 35%;
         right: 1%;
         cursor: pointer;
         z-index: 1;
@@ -76,6 +83,12 @@
         transition: $transition;
         &:hover {
           transform: scale(1.1);
+        }
+        > img {
+          height: 100%;
+          width: 100%;
+          -o-object-fit: cover;
+             object-fit: cover;
         }
         // @media (max-width: 700px) { display: none;}
       }
@@ -116,8 +129,8 @@
             }
           }
           > .play {
-            height: 100px;
-            width: 100px;
+            height: 75px;
+            width: 75px;
             position: absolute;
             top: 50%;
             left: 50%;
