--- a/villaride/style/scss/_block-9.scss
+++ b/villaride/style/scss/_block-9.scss
@@ -50,6 +50,7 @@
         position: relative;
         z-index: 2;
         line-height: 30px;
+        background-color: rgba(255,255,255,0.7);
       }
     }
     > .map {
