--- a/villaride/style/scss/_footer.scss
+++ b/villaride/style/scss/_footer.scss
@@ -8,6 +8,11 @@
   background-position: -15% top;
   box-shadow: 0px -10px 10px 5px rgba(34, 60, 80, 0.3);
   @media (max-width: 1100px) { background-position: 50% 200%;}
+  @media (max-width: 950px) { background-position: -50% 750%;}
+  @media (max-width: 778px) { background-position: 50% 450%;}
+  @media (max-width: 750px) { background-position: 50% 300%;}
+  @media (max-width: 600px) { background-position: 50% 200%;}
+  @media (max-width: 450px) { background-position: 50% 150%;}
   > div {
     @media (max-width: 1100px) { flex-wrap: wrap;}
     @media (max-width: 900px) { padding: 0 30px; }
@@ -19,7 +24,7 @@
       font-family: 'Proxima Nova Lt';
       padding: 0 30px;
       font-size: 1.1em;
-      @media (max-width: 750px) { justify-content: space-between; width: 100%; padding: 0;}
+      @media (max-width: 750px) { justify-content: space-between; width: 100%; padding: 0; margin: 0;}
       @media (max-width: 450px) { flex-direction: column;}
       > li {
         padding: 10px 0 0 0;
@@ -41,7 +46,8 @@
     }
     > .header-tel {
       margin: 0 25px 0 0;
-      @media (max-width: 450px) { margin: 25px 0 0 0; }
+      @media (max-width: 750px) { margin: 25px 0 0 0; }
+      @media (max-width: 450px) {}
       > a {
         font-family: 'Proxima Nova Rg';
         letter-spacing: 0.02em;
@@ -75,8 +81,9 @@
   }
   > .footer-bottom-content {
     padding: 25px 0 0 0;
+    @media (max-width: 950px) { flex-direction: column; justify-content: center; align-items: center;}
     > div {
-      @media (max-width: 450px) { flex-direction: column; justify-content: center; align-items: center;}
+      @media (max-width: 600px) { flex-direction: column; justify-content: center; align-items: center;}
       > .footer-ogrn {
         font-family: 'Proxima Nova Lt';
         font-size: 1.1em;
@@ -99,8 +106,27 @@
         margin: 0 25px 0 0;
         display: flex;
         flex-direction: column;
+        @media (max-width: 650px) { margin: 0;}
         > a {
           margin: 0 0 10px 0;
+        }
+      }
+      > .icons {
+        margin-right: 15px;
+
+        > a {
+          margin: 0 5px 0 0;
+          height: 35px;
+          width: 35px;
+          > img {
+            height: 100%;
+            width: 100%;
+            -o-object-fit: cover;
+               object-fit: cover;
+          }
+        }
+        > a:last-child {
+          margin: 0;
         }
       }
       > div {
