--- a/villaride/style/scss/_header.scss
+++ b/villaride/style/scss/_header.scss
@@ -19,6 +19,7 @@
       font-family: 'Proxima Nova Lt';
       padding: 0 30px;
       font-size: 1.1em;
+      @media (max-width: 1200px) { margin: 0; }
       @media (max-width: 1100px) { display: none; }
       > li {
         padding: 10px 0 0 0;
@@ -70,20 +71,18 @@
       font-weight: 900;
       position: relative;
       @media (max-width: 1100px) {display: flex;}
-      &:hover > ul {display: flex;}
+      @media (max-width: 500px) {font-size: 3.5em;}
       > ul {
         padding: 5px;
         position: absolute;
         top: 100%;
         right: 0;
-        display: none;
         flex-direction: column;
         justify-content: center;
         align-items: flex-end;
         background-color: white;
         box-shadow: 0px 10px 10px 5px rgba(34, 60, 80, 0.3);
         border-radius: 5px;
-        transition: $transition;
         > li {
           margin: 5px 0;
           list-style-type: none;
@@ -122,6 +121,7 @@
           font-family: 'Proxima Nova Lt';
           text-transform: uppercase;
           font-size: 0.7em;
+          margin: 0;
         }
         @media (max-width: 1100px) { margin: 0 0 0 0; }
       }
