--- a/villaride/style/scss/_modals.scss
+++ b/villaride/style/scss/_modals.scss
@@ -2,14 +2,15 @@
   position: fixed;
   top: 90px;
   left: 0;
-  height: calc(100vh - 90px);
+  // height: calc(100vh - 90px);
+  height: #{calc(100vh - 90px)};
   width: 100%;
   background-color: rgba(0,0,0,0.9);
   justify-content: center;
   align-items: center;
   z-index: 100;
-  @media (max-width: 500px) { top: 125px; }
-  overflow-y: auto;
+  @media (max-width: 500px) { top: 139px; }
+  padding-bottom: 50px;
   > .image {
     position: absolute;
   }
@@ -47,26 +48,27 @@
     z-index: -1;
   }
   > .modal-info {
+    // height: 100%;
     height: 100%;
-    max-height: 460px;
     width: 95%;
-    max-width: 840px;
+    max-width: 1210px;
     background-color: white;
     background-image: url('../image/bg-modal.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     border-radius: 50px;
-    overflow: hidden;
-    padding: 0 0 0 40px;
-
+    overflow-y: auto;
+    padding: 0 10px 0 40px;
+    @media (max-width: 500px) { padding: 0 10px 0 10px; }
     > .decoration {
-      height: calc(100% - 80px);
-      margin: 40px 15px 0 0;
+      margin: 40px 15px 40px 0;
       width: 12px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      @media (max-width: 700px) {margin: 80px 10px 40px 0;}
+
       > div {
         height: 12px;
         width: 12px;
@@ -109,12 +111,13 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      @media (max-width: 700px) {padding: 80px 0 40px;}
       > div {
-        max-width: 500px;
         > h3 {
           font-family: 'Proxima Nova Rg';
           font-size: 1.2em;
           font-weight: 400;
+          @media (max-width: 600px) {font-size: 1em;}
           > span {
             color: #d60909;
           }
@@ -123,14 +126,15 @@
           font-family: 'Proxima Nova Rg';
           font-size: 1.5em;
           font-weight: 900;
+          @media (max-width: 600px) {font-size: 1.2em;}
         }
       }
       > p {
-        max-width: 450px;
         font-family: 'Proxima Nova Rg';
         font-size: 1em;
         font-weight: 400;
-
+        margin: 0;
+        @media (max-width: 600px) {font-size: 0.9em;}
         > span {
           font-family: 'Proxima Nova Rg';
           font-size: 1em;
@@ -165,9 +169,11 @@
           &:hover {
             border: 3px solid #23bc47;
           }
-          > .close-sigil {
-            font-size: 2.5em;
-            margin: 0 0 5px 0;
+          > img {
+            height: 70%;
+            width: 70%;
+            -o-object-fit: cover;
+               object-fit: cover;
           }
         }
       }
@@ -197,6 +203,7 @@
           font-size: 1.2em;
           font-weight: 400;
           color: white;
+          @media (max-height: 650px) { color: black; }
         }
         > .close-icon {
           height: 40px;
@@ -208,13 +215,15 @@
           align-items: center;
           background-color: none;
           cursor: pointer;
+          @media (max-height: 650px) { border: 3px solid black; }
           &:hover {
             border: 3px solid #23bc47;
           }
-          > .close-sigil {
-            font-size: 2.5em;
-            margin: 0 0 5px 0;
-            color: white;
+          > img {
+            height: 70%;
+            width: 70%;
+            -o-object-fit: cover;
+               object-fit: cover;
           }
         }
       }
@@ -243,6 +252,7 @@
         font-size: 1em;
         font-weight: 400;
         text-align: center;
+        margin: 0;
       }
       > input {
         height: 50px;
@@ -329,10 +339,11 @@
           &:hover {
             border: 3px solid #23bc47;
           }
-          > .close-sigil {
-            font-size: 2.5em;
-            margin: 0 0 5px 0;
-            color: white;
+          > img {
+            height: 70%;
+            width: 70%;
+            -o-object-fit: cover;
+               object-fit: cover;
           }
         }
       }
