--- a/uyut/style/scss/_basic.scss
+++ b/uyut/style/scss/_basic.scss
@@ -3,6 +3,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 html {
   width: 100%;
@@ -24,10 +25,18 @@ body {
 }
 a {
 	text-decoration: none;
-	color: #222222;
+	color: #333333;
+}
+h1, h2, h3, p {
+	color: #333333;
 }
 button {
   cursor: pointer;
+  outline: none;
+  transition: 0.3s;
+}
+input {
+  outline: none;
 }
 .container {
   max-width: 1200px;
@@ -48,10 +57,13 @@ display: none;
 .flex-column {
   flex-direction: column;
 }
+.flex-wrap {
+  flex-wrap: wrap;
+}
 .flex-justify-start {
   justify-content: flex-start;
 }
-.space-justify-around {
+.flex-justify-around {
   justify-content: space-around;
 }
 .flex-justify-between {
@@ -65,4 +77,50 @@ display: none;
 }
 .flex-align-baseline {
   align-items: baseline;
+}
+.btn-blue {
+  transition: 0.1s;
+  border: none;
+  color: white;
+  font-family: 'Museo Sans Cyrl 300';
+  font-size: 1.05em;
+  text-transform: uppercase;
+  background: rgb(31,178,246);
+  background: linear-gradient(to bottom,  rgba(31,178,246,1) 0%,rgba(6,101,165,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1fb2f6', endColorstr='#0665a5',GradientType=0 );
+
+  &:hover {
+    background: rgb(0,84,141);
+    background: linear-gradient(to bottom,  rgba(0,84,141,1) 0%,rgba(0,58,98,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00548d', endColorstr='#003a62',GradientType=0 );
+  }
+  &:active {
+    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 1) inset;
+  }
+}
+.btn-red {
+  transition: 0.1s;
+  border: none;
+  color: white;
+  font-family: 'Museo Sans Cyrl 300';
+  font-size: 1.05em;
+  text-transform: uppercase;
+  background: rgb(241,61,69);
+  background: linear-gradient(to bottom,  rgba(241,61,69,1) 0%,rgba(166,11,12,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f13d45', endColorstr='#a60b0c',GradientType=0 ); /* IE6-9 */
+
+
+  &:hover {
+    background: rgb(0,84,141);
+    background: linear-gradient(to bottom,  rgba(0,84,141,1) 0%,rgba(0,58,98,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00548d', endColorstr='#003a62',GradientType=0 );
+  }
+  &:active {
+    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 1) inset;
+  }
+}
+.blue-gradient {
+  background: rgb(31,178,246);
+  background: linear-gradient(to bottom,  rgba(31,178,246,1) 0%,rgba(6,101,165,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1fb2f6', endColorstr='#0665a5',GradientType=0 );
 }
