--- a/villaride/style/scss/_block-6.scss
+++ b/villaride/style/scss/_block-6.scss
@@ -12,7 +12,7 @@
       max-width: 700px;
       > h2 {
         margin: 130px 0 0 10px;
-        font-family: 'Proxima Nova Bl';
+        font-family: 'Proxima Nova Rg';
         font-size: 2em;
         text-transform: uppercase;
         color: white;
