--- a/villaride/style/scss/_block-7.scss
+++ b/villaride/style/scss/_block-7.scss
@@ -10,7 +10,7 @@
     > .title {
       > h2 {
         text-align: center;
-        font-family: 'Proxima Nova Bl';
+        font-family: 'Proxima Nova Rg';
         font-size: 3em;
         text-transform: uppercase;
         margin: 10px 0 10px 0;
