--- a/uyut/style/scss/index.scss
+++ b/uyut/style/scss/index.scss
@@ -1,4 +1,10 @@
 // sass --watch style/scss:style
 @import "variables";
 @import "basic";
+@import "header";
+@import "navigation";
 @import "main";
+@import "block-1";
+@import "block-2";
+@import "block-3";
+@import "footer";
