--- a/villaride/style/scss/_block-1.scss
+++ b/villaride/style/scss/_block-1.scss
@@ -17,8 +17,12 @@
           margin: 50px 0 0 65px;
           font-family: 'Proxima Nova Rg';
           text-transform: uppercase;
-          font-size: 2em;
-          font-weight: 400;
+          font-size: 2.3em;
+          font-weight: 700;
+          color: #21b744;
+          > span {
+            color: #1f7ec0;
+          }
         }
         > .block-1-title {
           margin: 35px 0 0 0;
@@ -208,7 +212,7 @@
           position: absolute;
           height: 86%;
           width: 60%;
-          top: 15%;
+          top: 10%;
           left: 20%;
           z-index: 1;
           background-color: #21b744;
