--- a/villaride/style/scss/_modals.scss
+++ b/villaride/style/scss/_modals.scss
@@ -9,7 +9,7 @@
   justify-content: center;
   align-items: center;
   z-index: 100;
-  @media (max-width: 500px) { top: 139px; }
+  @media (max-width: 500px) { top: 113px; height: #{calc(100vh - 113px)}; }
   padding-bottom: 50px;
   > .image {
     position: absolute;
@@ -49,9 +49,9 @@
   }
   > .modal-info {
     // height: 100%;
-    height: 100%;
+    max-height: 100%;
     width: 95%;
-    max-width: 1210px;
+    max-width: 800px;
     background-color: white;
     background-image: url('../image/bg-modal.jpg');
     background-repeat: no-repeat;
@@ -59,6 +59,7 @@
     background-size: cover;
     border-radius: 50px;
     overflow-y: auto;
+    overflow-x: hidden;
     padding: 0 10px 0 40px;
     @media (max-width: 500px) { padding: 0 10px 0 10px; }
     > .decoration {
@@ -112,6 +113,7 @@
       flex-direction: column;
       justify-content: space-between;
       @media (max-width: 700px) {padding: 80px 0 40px;}
+      @media (max-width: 400px) { padding: 50px 0 10px; }
       > div {
         > h3 {
           font-family: 'Proxima Nova Rg';
@@ -144,6 +146,8 @@
     }
     > .close {
       position: relative;
+      top: -20px;
+      right: -20px;
       > .close-block {
         position: absolute;
         top: 30px;
