--- a/uyut/style/scss/_basic.scss
+++ b/uyut/style/scss/_basic.scss
@@ -119,6 +119,12 @@ display: none;
     box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 1) inset;
   }
 }
+.color-blue {
+  color: #1490d2;
+}
+.color-green {
+  color: #32ae47;
+}
 .blue-gradient {
   background: rgb(31,178,246);
   background: linear-gradient(to bottom,  rgba(31,178,246,1) 0%,rgba(6,101,165,1) 100%);
