--- a/uyut/style/scss/_block-1.scss
+++ b/uyut/style/scss/_block-1.scss
@@ -50,7 +50,7 @@
           width: 270px;
           border-radius: 3px;
           padding: 0 15px 0 15px;
-          box-shadow: 0px 0px 5px 5px rgba(34, 60, 80, 0.2);
+          box-shadow: $shadow;
           background-color: white;
           cursor: pointer;
           transition: $transition;
