--- a/uyut/style/scss/_block-5.scss
+++ b/uyut/style/scss/_block-5.scss
@@ -1,50 +1,44 @@
-.block-3 {
-  background-image: url('../image/block-3-bg.jpg');
-  background-repeat: no-repeat;
-  background-position: center center;
-  min-height: 750px;
-  > .block-3-content {
-    > .block-3-form {
+.block-5 {
+  position: relative;
+  min-height: 800px;
+  width: 100%;
+  > .block-5-bg {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    > img {
+      height: 100%;
+      width: 100%;
+      -o-object-fit: cover;
+         object-fit: cover;
+    }
+  }
+  > .title {
+    margin: 50px auto 0;
+    padding: 150px 0 0 0;
+    text-align: center;
+    max-width: 830px;
+    > h2 {
+      font-family: 'Museo Sans Cyrl 700';
+      font-size: 2.5em;
+      text-transform: uppercase;
+      font-weight: 500;
+      color: white;
+    }
+  }
+  > .block-5-content {
+    > .block-5-form {
       width: 100%;
       max-width: 700px;
-      margin: 150px 0 0 0;
-      > .title {
-        display: flex;
-        align-items: center;
-        > .decoration {
-          height: 25px;
-          width: 25px;
-          border-radius: 50%;
-          background: rgb(31,178,246);
-          background: linear-gradient(to bottom,  rgba(31,178,246,1) 0%,rgba(6,101,165,1) 100%);
-          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1fb2f6', endColorstr='#0665a5',GradientType=0 );
-          margin: 0 10px 0 0;
-        }
-        > h2 {
-          font-family: 'Museo Sans Cyrl 700';
-          font-size: 2em;
-          text-transform: uppercase;
-          font-weight: 500;
-          color: white;
-          > span {
-            font-family: 'Museo Sans Cyrl 900';
-            text-transform: uppercase;
-            font-weight: 900;
-            color: #e0cf12;
-          }
-        }
-      }
-      > p {
-        font-family: 'Museo Sans Cyrl 300';
-        font-size: 1.1em;
-        color: white;
-      }
-      > .input{
+      margin: 100px 0 0 0;
+      > .input {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
         max-width: 570px;
-        margin: 40px 0 0 0;
         > input {
           height: 45px;
           width: 270px;
@@ -137,63 +131,36 @@
     }
     > .info {
       width: 100%;
-      min-height: 450px;
-      margin: 200px 0 0 0;
-      background-image: URL('../image/block-3-image-2.png');
-      background-repeat: no-repeat;
-      background-position: center;
-      position: relative;
-      > .image {
-        position: absolute;
-        top: -21%;
-        left: 22%;
-      }
-      > .info-1 {
-        position: absolute;
-        top: -5%;
-        left: 12%;
+      margin: 100px 0 0 0;
+      > .list {
+        display: flex;
+        margin: 0 0 30px 0;
+        cursor: pointer;
+        transition: $transition;
+        &:hover {
+          transform: scale(1.2) translateX(5%);
+        }
+        > .decoration {
+          height: 10px;
+          width: 10px;
+          border-radius: 50%;
+          background: rgb(31,178,246);
+          background: linear-gradient(to bottom,  rgba(31,178,246,1) 0%,rgba(6,101,165,1) 100%);
+          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1fb2f6', endColorstr='#0665a5',GradientType=0 );
+          margin: 5px 20px 0 0;
+        }
         > p {
           font-family: 'Museo Sans Cyrl 300';
           font-size: 1em;
           color: white;
-        }
-        > h2 {
-          font-family: 'Museo Sans Cyrl 900';
-          font-size: 3em;
-          color: white;
+          width: #{calc(100% - 30px)};
         }
       }
-      > .info-2 {
-        position: absolute;
-        top: 81%;
-        left: -5%;
-        > p {
-          font-family: 'Museo Sans Cyrl 300';
-          font-size: 1em;
-          color: white;
-        }
-        > h2 {
-          font-family: 'Museo Sans Cyrl 900';
-          font-size: 3em;
-          color: white;
-          text-align: right;
-        }
-      }
-      > .info-3 {
-        position: absolute;
-        top: 25%;
-        left: 90%;
-        width: 250px;
-        > p {
-          font-family: 'Museo Sans Cyrl 300';
-          font-size: 1em;
-          color: white;
-        }
-        > h2 {
-          font-family: 'Museo Sans Cyrl 900';
-          font-size: 3em;
-          color: white;
-        }
+      > h2 {
+        color: #fcda20;
+        font-family: 'Museo Sans Cyrl 700';
+        font-size: 1.5em;
+        margin-left: 30px;
       }
     }
   }
