--- a/uyut/style/scss/_navigation.scss
+++ b/uyut/style/scss/_navigation.scss
@@ -1,6 +1,6 @@
 .navigation {
   height: 40px;
-  box-shadow: 0px 0px 10px 10px rgba(34, 60, 80, 0.3);
+  box-shadow: $shadow;
   position: relative;
   z-index: 2;
   > ul {
@@ -19,7 +19,7 @@
       transition: $transition;
       > a {
         font-family: 'Museo Sans Cyrl 500';
-        font-size: 1.2em;
+        font-size: 1em;
       }
       > .image {
         height: 15px;
