--- a/uyut/style/scss/_variables.scss
+++ b/uyut/style/scss/_variables.scss
@@ -1,4 +1,7 @@
 @import url('../fonts/museo-sans/stylesheet.css');
+@import "../../fonts/fontawesome/scss/fontawesome.scss";
+@import "../../fonts/fontawesome/scss/solid.scss";
+@import "../../fonts/fontawesome/scss/regular.scss";
 
 $mainColor: #f16d7f; // Розовый цвет
 $alterColor: #f6f6f6; // Серый цвет
@@ -10,7 +13,7 @@ $fontColor: #222222;
 $border: 1px solid #ececec;
 $cartTitleBg: rgba(248, 243, 244, 1); // цвет для заголовка на странице корзина
 $transition: 0.3s; // скорость для переходов
-$shadow: 0px 1px 3px 2px rgba(0,0,0,0.3);
+$shadow: 0px 0px 10px 5px rgba(195, 195, 195, 0.3);
 
 @mixin elHover($_color) { // цвет при наведении
   background-color: darken($_color, 10%);
